--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,10 @@ jacocoTestReport { //Please do not change this
     }
 }
 jar {
-    archiveBaseName = 'mymoney' //Please do not change this final artifact name
-    version = 1.0               //Please do not change this final artifact version
+    archiveBaseName = 'geektrust' //Please do not change this final artifact name
+    version =  null               //Please do not change this final artifact version
     manifest {
-        attributes 'Main-Class': 'com.saikrishna.mymoney.MyMoneyApplication'
-        //Change this to the main class of your program which will be executed
+        attributes 'Main-Class' : 'com.saikrishna.mymoney.MyMoneyApplication' //Change this to the main class of your program which will be executed
     }
     // To create a single jar with all dependencies.
     from {
@@ -36,7 +35,6 @@ jar {
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
     }
-    destinationDirectory.set(file("$buildDir/target"))
 }
 test { ///Please do not change this
     useJUnitPlatform()
@@ -62,8 +60,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'
     testRuntimeOnly 'org.mockito:mockito-junit-jupiter:5.0.0'
 }
